tests/snapshots/delete_operations_test__cut_and_paste_move_word.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
world hello [t]est
