tests/snapshots/delete_operations_test__d3l_delete_3_chars_right.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
hel[l]o world
