tests/snapshots/delete_operations_test__d_dollar_basic.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:5
Lines: 1

Buffer:
hello[ ]
