tests/snapshots/delete_operations_test__d_percent_angle_brackets.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 1

Buffer:
Ve[c]
