tests/snapshots/delete_operations_test__d_percent_curly_braces.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:1
Lines: 3

Buffer:
f[n] test() {
    code here
}
