tests/snapshots/delete_operations_test__d_percent_multiline.snap
---
source: tests/delete_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:14
Lines: 1

Buffer:
if (condition)[ ]
